# LuckBot

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.luckbot/: mcp.json
agent/built_in/: __init__.py  mcp_plugin.py  skills_plugin.py
agent/llm/: client.py
agent/loop/: __init__.py  agent_loop.py
agent/plugin/: __init__.py  base.py  hooks.py  manager.py
agent/tools/: builtin.py
app/: __init__.py  cli.py
monitoring/: docker-compose.yml  otel-collector-config.yaml  tempo.yml
mydocs/: README.md
mydocs/micro_specs/: 2026-05-03_17-35_tracer-truth-doc.md  _template.md
mydocs/project/: README.md  _template.md  agent-loop.md  gateway-system.md  glossary.md  mcp-system.md  memory-system.md  observability-system.md  plugin-system.md  runtime-system.md  session-system.md  skills-system.md
mydocs/specs/: 2026-05-03_15-08_agent-loop-risk-calibration.md  2026-05-03_15-40_subagent-runtime-generalization.md  2026-05-03_16-20_message-lifecycle-trace-audit.md  (+4 more)
scripts/: test_mcp_server.py
tests/: conftest.py  test_agent_runtime.py  test_commands.py  test_gateway.py  test_gateway_control.py  test_langsmith_observability.py  test_llm_client.py  test_main_entry.py  test_math_calc_skill.py  test_memory_archives.py  test_memory_tools.py  test_observability_and_transcript.py  test_observability_settings.py  test_observability_telemetry.py  test_plugin_services.py  test_runtime_messages_mode.py  test_skill_system.py  test_skills_registry.py  test_state_paths.py  test_subagent_runtime.py  test_tools_plugin.py
(+111 files in other folders)
