[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luckbot"
version = "0.1.0"
description = "LuckBot terminal agent"
requires-python = ">=3.13"
dependencies = [
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langsmith>=0.4.0",
  "python-dotenv>=1.0.1",
  "python-frontmatter>=1.1.0",
  "langchain-mcp-adapters>=0.2.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-http>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "rich>=13.0.0",
  "numpy>=1.26.0",
  "dashscope>=1.20.0",
  "sqlite-vec>=0.1.0",
  "watchdog>=4.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
luckbot = "luckbot.entrypoints.cli:main"
luckbot-gateway = "luckbot.entrypoints.gateway:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["luckbot*"]
